# student-thesis-physical-layer-key-generation

./: README.md
csi-collector/: Cargo.toml  README.md  derivation.nix  flake.nix
csi-collector/src/: main.rs  structs.rs  web_uuid.rs
csi-testbed-openwrt/: .gitlab-ci.yml  README.md  build.yml
csi-testbed-openwrt/docs/patches/: README.md  c103862f5430aa28db86fd5121d632ffd290cca4-csi_len0.patch
csi-testbed-openwrt/docs/patches/wands-wireless-Atheros_CSI_tool_OpenWRT_src/: ar9003_csi.c
csi-testbed-openwrt/src/: .config-unpatched  .config.ar300m16  .config.tlwr1043ndv2  .gitignore  Dockerfile.ar300m16  Dockerfile.tlwr1043ndv2  copy-to-router-glinet.sh  copy-to-router-tplink.sh
csi-testbed-openwrt/src/files/etc/: shadow  sysupgrade.conf
csi-testbed-openwrt/src/files/etc/config/: firewall
csi-testbed-openwrt/src/files/etc/dropbear/: authorized_keys
csi-testbed-openwrt/src/files/etc/init.d/: csi-extraction
csi-testbed-openwrt/src/patches/: csi-extraction.patch
measurements/: .gitignore  README.md  flake.nix  kernels.nix
measurements/channel-plots/: Statistical Tests.ipynb
measurements/channel-round-trip-time/: Channel Round Trip Time.ipynb
server/: configuration.nix  csi-collector.nix  default.nix  hardware-configuration.nix  networking.nix  openwrt-updater.nix
