[package]
name = "csi-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.0"
clap = { version = "^4.0", features = ["derive"] }
env_logger = "*"
log = "*"
uuid = "*"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
